Bug 148345 - Writer track changes: not visible Reject Changes of tracked table row deletion in Hide Changes mode
Summary: Writer track changes: not visible Reject Changes of tracked table row deletio...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-04-04 07:08 UTC by NISZ LibreOffice Team
Modified: 2022-04-27 06:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-04-04 07:08:16 UTC
Description:
Using Reject Changes after deleting table row in Hide Changes mode with change tracking didn’t show the row as deleted.

Steps to Reproduce:
1.Enable recording of track changes.
2.Disable Show Changes, i.e. enable Hide Changes mode.
3.Delete a table row. The table row disappears.
4.Click on Reject Changes. The table row didn’t reappear.

Actual Results:
Undeleted rows aren’t visible in Hide Changes mode.

Expected Results:
Undeleted rows are visible in Hide Changes mode.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a3988b2d147a2442b348d58b79dbd6e71472b7af
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2022-04-05 05:49:21 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d4e2ed9324bd736275f07577ba81c974a0a70eb1

tdf#148345 sw: reject all tracked row deletion in Hide Changes

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2022-04-05 13:16:06 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/4494e24c29d9a673964feb9c637b13122ee17f87

tdf#148345 sw: reject all tracked row deletion in Hide Changes

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2022-04-27 06:40:59 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 67d8c245daf7c6ee33e908255f2bbd0ea8d08206
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded