tdf#148345 sw: reject all tracked row deletion in Hide Changes

In Hide Changes mode, undeleted rows didn't reappear at applying
Reject All for tracked row deletions.

See also commit a74c51025fa4519caaf461492e4ed8e68bd34885
"tdf#146962 sw: hide deleted row at deletion in Hide Changes".

Change-Id: I55d76fb0165fefc330934c5a2a6b018904d3a1a8